# NexMap

./: .gitignore  README.md
.claude/skills/quake-mapping/: SKILL.md  layout.md  lighting.md  prefabs.md  themes.md
docs/: blueprint_schema.json  llm-reference.md  oblige-themes-plan.md
examples/blueprints/: the_cistern.json  the_foundry.json
examples/shareware/: e1m1.json  e1m2.json  e1m3.json  e1m4.json  e1m5.json  e1m6.json  e1m7.json  e1m8.json  start.json
maps/: _layout_test.py  _prefab_gallery.py  _stairs_test.py  helix.py  qgeo.py  qlayout.py  qprefab.py  qtheme.py  sanctum.py  sludge.py  well.py
memory/: feedback_helix_playtest.md  project_gate_mechanics.md
src/mapgen/: __init__.py  __main__.py  analyze_id1.py  blueprint.py  blueprint_compiler.py  brush.py  compile.py  entities.py  layout.py  navcheck.py  textures.py
src/mapgen_cpp/: CMakeLists.txt
src/mapgen_cpp/config/: default.json
src/mapgen_cpp/include/mapgen/: brush.h  compile.h  config.h  entities.h  layout.h  navcheck.h  textures.h
src/mapgen_cpp/src/: brush.cpp  compile.cpp  config.cpp  entities.cpp  layout.cpp  main.cpp  navcheck.cpp  textures.cpp
src/nexmap/: assemble.go  blueprint.go  brush.go  brushlib.go  bsp2blueprint.go  bspbuild.go  bspfile.go  chunk_test.go  chunks.go  compile.go  compiler.go  entities.go  go.mod  go.sum  layout.go  main.go  navcheck.go  palettes.go  prefabs.go  procgen.go  render.go  textures.go  themes.go  tilescan.go
tools/: _ground_empty.py  bin2bsp.py  flowstruct.py  mapfeatures.py  pakextract.py  qcheck.py  qcorpus.py  qflow.py  vga.py
tools/navcheck/: CMakeLists.txt  main.cpp  nav_ents.cpp  nav_ents.h  nav_hull.cpp  nav_hull.h  nav_links.cpp  nav_links.h  nav_mesh.cpp  nav_mesh.h  qents.cpp  qents.h  qworld.cpp  qworld.h
